--- a/overlay/packages/services/Telephony/res/values/config.xml
+++ b/overlay/packages/services/Telephony/res/values/config.xml
@@ -21,4 +21,7 @@
 <resources>
     <!-- Flag indicating if hac is enabled -->
     <bool name="hac_enabled">true</bool>
+	    
+    <!-- The package name for the platform carrier config app, bundled with system image. -->
+    <string name="platform_carrier_config_package" translatable="false">com.google.android.carrier</string>
 </resources>
